--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.6.0",
     "three": "^0.182.0",
     "web-vitals": "^2.1.4"
   },
